ispCP ω 1.0.4 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2010-01-06 Peter Ziergöbel
	- GUI:
		* Fixed #1994: Domain expiration in client's General information

2010-01-04 Christian Hernmarck
	- GUI:
		* Fixed #2142: "Subdomain add Bug" (problem of ie caused by wrong html in tpl)

2010-01-02 Peter Ziergöbel
	- GUI:
		* Fixed #2123: Add "Backup Support" in ../reseller/domain_details.php and in ../admin/domain_details.php

2009-12-31 Laurent Declercq
	- CONFIGS:
		* Fixed #2132: All ispCP init scripts must be written in Shell and use only POSIX features
	- DOCS:
		* Updated OpenSUSE INSTALL file

2009-12-30 Christian Hernmarck
	- GUI:
		* Fixed #2139: HY93 (or similar) error when deleting domain with alias
		* Fixed #2138: Deny to create the subdomains "backups" and "phptmp"

2009-12-29 Benedikt Heintel
	- GUI:
		* Fixed Error in Hosting Plan Edit
	- LANGUAGES:
		* Updated Lithuanian

2009-12-29 Christian Hernmarck
	- CONFIGS:
		* Fixed #2136: Port 465 is missing in ispcp_network daemon

2009-12-28 Marc Pujol
	- GUI:
		* Fixed #2135: open_basedir errors in net2ftp

2009-12-27 Benedikt Heintel
        - LANGUAGES:
                * Updated Polish
                * Updated Swedish

2009-12-24 Benedikt Heintel
	- RELEASE ispCP ω Omega 1.0.3-1
	- GUI:
		* Added Demo Translation Strings

2009-12-23 Marc Pujol
	- BACKEND:
		* Fixed #2122: Critical security bug exploitable by local users

2009-12-23 Laurent Declercq
	- GUI:
		* Updated TLDs list
		* Fixed #2113: Wrong SQL syntax in /var/www/ispcp/gui/client/hosting_plan_update.php (Line: 451)
	- CONFIGS:
		* The file ispcp.conf should be readable by everyone. (Should be changed in 1.0.4)
		* Added PMA_USER for recovery process during update
	- SETUP
		* Added recovery process for PMA configuration file

2009-12-22 Marc Pujol
	- GUI:
		* Tightened default permission settings
	- BACKEND:
		* Tightened default permission settings

2009-12-21 Benedikt Heintel
	- GUI:
		* Fixed: Password generation in order panel