@@ -126,6 +126,14 @@
                               <td class="content"><input type="text" name="nreseller_max_disk" value="{MAX_DISK_AMOUNT}" style="width:140px" class="textinput" />
                               </td>
                             </tr>
+							<tr>
+								<td width="25">&nbsp;</td>
+								<td class="content2" width="200">{TR_SUPPORT_SYSTEM}</td>
+								<td class="content">
+									<input name="support_system" value="yes" checked="checked" type="radio">{TR_YES}
+									<input name="support_system" value="no"  type="radio">{TR_NO}
+								</td>
+							</tr>
                             <tr>
                               <td>&nbsp;</td>
                               <td colspan="2"><table cellpadding="5" cellspacing="5" border="0" width="100%">
