@@ -1,8 +1,13 @@
 ispCP ω 1.0.4 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2010-01-06 Benedikt Heintel
+	- GUI:
+		* Fixed #1121: Support System (Patch by Sebastian Sellmeyer)
+
 2010-01-06 Peter Ziergöbel
 	- GUI:
+		* Fixed #1867: clicking on select box when adding subdomain should check corresponding radio button
 		* Fixed #1994: Domain expiration in client's General information
 
 2010-01-04 Christian Hernmarck
